--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </video>
 
         <div class="hero-content">
-            <h1>Ongi etorri Hezkuntza Baliabidetara</h1>
+            <h1>Ongi etorri</h1>
             <p>Espazio hau irakasleei eta familiei zuzenduta dago, bereziki etxean dibortzio-egoera baten eragina jasaten ari diren ikasleei laguntzeko.</p>
         </div>
     </section>
